[package]
name = "runs"
version = "0.1.0"
authors = ["Clifford T. Matthews <ctm@devctm.com>"]
edition = "2024"

[build-dependencies]
phf_codegen = "0.13"

[dependencies]
nom = "8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
htmlescape = "0.3.1"
digital-duration-nom = { version = "0.6.0", git = "https://github.com/ctm/digital-duration-nom", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
clap = { version = "4.5", features = ["derive"] }
phf = "0.13"
anyhow = "1.0.98"
mail-parser = { version = "0.11.0", default-features = false }
scraper = { version = "0.24", default-features = false, features = ["deterministic"] }
itertools = "0.14.0"
csv = "1.3.1"
