[package]
name = "runs"
version = "0.1.0"
authors = ["Clifford T. Matthews <ctm@devctm.com>"]
edition = "2024"

[build-dependencies]
phf_codegen = "0.13"

[dependencies]
nom = { version = "8", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.140"
htmlescape = "0.3.1"
digital-duration-nom = { version = "0.6.0", git = "https://github.com/ctm/digital-duration-nom", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["blocking"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
phf = { version = "0.13", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
mail-parser = { version = "0.11.0", default-features = false }
scraper = { version = "0.24", default-features = false }
itertools = { version = "0.14.0", default-features = false }
csv = "1.3.1"
